--- a/kosakata.html
+++ b/kosakata.html
@@ -123,7 +123,10 @@
       ["kiui", "kiwi"],["guaba", "jambu biji"],["hoshibudou", "kismis"],["zakuro", "delima"],["kokonottsu", "kelapa"],["kiichigo", "rasbery"],["budou", "anggur"],
       ["nashi", "pir"],["yasai", "sayur"],["daikon", "lobak jepang"],["retasu", "selada"],["tomato", "tomat"],["kinomi", "kacang kacangan"],["budou", "anggur"],
       ["jagaimo", "kentang"],["kyabetsu", "kubis"],["shouga", "jahe"],["nasu", "terong"],["buruuberii", "bluberry"],["burakkuberii", "blackberry"],["sakuranbou", "cherry"],
-      ["oribu", "buah jaitun"],
+      ["oribu", "buah jaitun"],["banana", "pisang"],["natsumeyashi no mi", "kurma"],["ninjin", "wortel"],["tamanegi", "bawang merah"],["ninniku", "bawang putih"],
+      ["sayaendou", "kacang panjang"],["endou mame/aomame", "kacang polong"],["karifurawaa", "kembang kol"],["mekyabetsu", "touge"],["kyuuri", "mentimun"],
+      ["piman", "cabe hijau"],["mame", "kacang"],["massuruumu", "jamur"],["hakusai", "sawi"],["kabocha", "labu"],["burokkorii", "brokoli"],["daizu", "kedelai"],
+      ["ingen mame", "kacang merah"]
     ];
      let questions = [], current = 0, score = 0;
     function shuffle(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}}
