--- a/kosakata.html
+++ b/kosakata.html
@@ -127,7 +127,9 @@
       ["sayaendou", "kacang panjang"],["endou mame/aomame", "kacang polong"],["karifurawaa", "kembang kol"],["mekyabetsu", "touge"],["kyuuri", "mentimun"],
       ["piman", "cabe hijau"],["mame", "kacang"],["massuruumu", "jamur"],["hakusai", "sawi"],["kabocha", "labu"],["burokkorii", "brokoli"],["daizu", "kedelai"],
       ["ingen mame", "kacang merah"],["ooki", "besar"],["chiisai", "kecil"],["nagai", "panjang"],["mijikai", "pendek"],["ooi", "banyak"],["sukunai", "sedikit"],
-      ["futoi", "gemuk,tebal"],["hosoi", "ramping,tipis"],["atsui", "tebal"],["usui", "tipis"],["katai", "keras"],["yawarakai", "lunak"],
+      ["futoi", "gemuk,tebal"],["hosoi", "ramping,tipis"],["atsui", "tebal"],["usui", "tipis"],["katai", "keras"],["yawarakai", "lunak"],["komakai", "kecil(uang)"],
+      ["arai", "kasar"],["atarashii", "baru"],["furui", "lama,tua"],["takai", "mahal"],["yasui", "murah"],["hayai", "cepat(waktu)"],["hayai", "cepat(kelajuan)"],
+      ["osoi", "lambat"],["tooi", "jauh"],["chikai", "dekat"],["tsuyoi", "kuat"],["yowai", "lemah"],["takai", "tinggi,mahal"],["hikui", "rendah"],
     ];
      let questions = [], current = 0, score = 0;
     function shuffle(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}}
