--- a/kosakata.html
+++ b/kosakata.html
@@ -129,7 +129,11 @@
       ["ingen mame", "kacang merah"],["ooki", "besar"],["chiisai", "kecil"],["nagai", "panjang"],["mijikai", "pendek"],["ooi", "banyak"],["sukunai", "sedikit"],
       ["futoi", "gemuk,tebal"],["hosoi", "ramping,tipis"],["atsui", "tebal"],["usui", "tipis"],["katai", "keras"],["yawarakai", "lunak"],["komakai", "kecil(uang)"],
       ["arai", "kasar"],["atarashii", "baru"],["furui", "lama,tua"],["takai", "mahal"],["yasui", "murah"],["hayai", "cepat(waktu)"],["hayai", "cepat(kelajuan)"],
-      ["osoi", "lambat"],["tooi", "jauh"],["chikai", "dekat"],["tsuyoi", "kuat"],["yowai", "lemah"],["takai", "tinggi,mahal"],["hikui", "rendah"],
+      ["osoi", "lambat"],["tooi", "jauh"],["chikai", "dekat"],["tsuyoi", "kuat"],["yowai", "lemah"],["takai", "tinggi,mahal"],["hikui", "rendah"],["atsui", "panas(mkn,minum dll)"],
+      ["atatakai", "hangat(mkn,minum dll)"],["atsui", "panas(suhu)"],["tsumetai", "dingin(mkn,minum dll)"],["nurui", "kurang panas, tdk panas tdk dingin jg"],["marui", "bundar bulat"],["amai", "manis"],
+      ["karai", "pedas"],["suppai", "asam"],["shiokarai", "asin"],["nigai", "pahit"],["koi", "pekat"],["usui", "tipis,encer(rasa)"],["oishii", "enak"],["mazui", "tidak enak"],["samui", "dingin(suhu)"],
+      ["atatakai", "hangat(suhu)"],
+      
     ];
      let questions = [], current = 0, score = 0;
     function shuffle(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}}
