--- a/kosakata.html
+++ b/kosakata.html
@@ -130,7 +130,7 @@
       ["futoi", "gemuk,tebal"],["hosoi", "ramping,tipis"],["atsui", "tebal"],["usui", "tipis"],["katai", "keras"],["yawarakai", "lunak"],["komakai", "kecil(uang)"],
       ["arai", "kasar"],["atarashii", "baru"],["furui", "lama,tua"],["takai", "mahal"],["yasui", "murah"],["hayai", "cepat(waktu)"],["hayai", "cepat(kelajuan)"],
       ["osoi", "lambat"],["tooi", "jauh"],["chikai", "dekat"],["tsuyoi", "kuat"],["yowai", "lemah"],["takai", "tinggi,mahal"],["hikui", "rendah"],["atsui", "panas(mkn,minum dll)"],
-      ["atatakai", "hangat(mkn,minum dll)"],["atsui", "panas(suhu)"],["tsumetai", "dingin(mkn,minum dll)"],["nurui", "kurang panas, tdk panas tdk dingin jg"],["marui", "bundar bulat"],["amai", "manis"],
+      ["atatakai", "hangat(mkn,minum dll)"],["atsui", "panas(suhu)"],["tsumetai", "dingin(mkn,minum dll)"],["nurui", "kurang panas, tdk panas tdk dingin jg"],["marui", "bundar/bulat"],["amai", "manis"],
       ["karai", "pedas"],["suppai", "asam"],["shiokarai", "asin"],["nigai", "pahit"],["koi", "pekat"],["usui", "tipis,encer(rasa)"],["oishii", "enak"],["mazui", "tidak enak"],["samui", "dingin(suhu)"],
       ["atatakai", "hangat(suhu)"],
       
