--- a/kanji.html
+++ b/kanji.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kuis Kanji (Arti + Kunyomi)</title>
+  <title>Kuis Kanji (Arti)</title>
   <style>
     body {
       font-family: sans-serif;
