--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="menu">
       <button onclick="goTo('kuis')">📝 Kuis Hiragana & Katakana</button>
       <button onclick="location.href='kuizz.html'">🗒️ Kuis Hiragana & Katakana</button>
-      <button onclick="goTo('kanji')">🈶 Kuis Kunyomi Kanji</button>
+      <button onclick="goTo('kanji')">🈶 Kuis Arti Kanji</button>
       <button onclick="goTo('kosakata')">📚 Kuis Kosakata</button>
       <button onclick="location.href='kotoba.html'">📔 Kotoba Minna</button>
       <button onclick="location.href='n5kosakata'">📒 Kosakata N5</button>
