--- a/kotoba.html
+++ b/kotoba.html
@@ -251,6 +251,24 @@
       ["きんようび", "jumat"],
       ["どようび", "sabtu"],
       ["にちようび", "minggu"],
+      ["なにようび", "hari apa"],
+      ["ばんごう", "nomor"],
+      ["なんばん", "nomor berapa"],
+      ["~から", "dari~"],
+      ["まで", "sampai~"],
+      ["~と~", "~dan~(kata benda)"],
+      ["そちら", "di sana"],
+      ["たいへんですね", "sangat menyusahkan ya (simpati)"],
+      ["えーと", "aa.."],
+      ["おねがいします", "minta tolong"],
+      ["かしこまりました", "ya, telah mengerti"],
+      ["おといあわせのばんごう", "nomor yang ditanyakan"],
+      ["[とうも]ありがとうございました", "terimakasih banyak"],
+      ["ニューヨーク", "new york"],
+      ["ペキン", "beijing"],
+      ["ロンドン", "london"],
+      ["バンコク", "bangkok"],
+      ["ロサンゼルス", "los angels"],
     ];
 
     let questions = [];
