--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     <h1>Selamat Datang di Website Belajar Jepang</h1>
     <p>Pilih salah satu kuis di bawah ini:</p>
     <div class="menu">
-      <button onclick="goTo('kuis')">📝 Kuis Hiragana & Katakana</button>
-      <button onclick="location.href='kuizz.html'">🗒️ Kuis Hiragana & Katakana</button>
+      <button onclick="goTo('kuis')">📝 Kuis Hiragana & Katakana 1</button>
+      <button onclick="location.href='kuizz.html'">🗒️ Kuis Hiragana & Katakana 2</button>
       <button onclick="goTo('kanji')">🈶 Kuis Arti Kanji</button>
       <button onclick="goTo('kosakata')">📚 Kuis Kosakata</button>
       <button onclick="location.href='kotoba.html'">📔 Kotoba Minna</button>
