--- a/kanji.html
+++ b/kanji.html
@@ -85,80 +85,226 @@
 
   <script>
     const data = [
-      ["日", "matahari"],
-      ["月", "bulan"],
-      ["木", "pohon"],
-      ["山", "gunung"],
-      ["川", "sungai"],
-      ["田", "sawah"],
-      ["人", "manusia"],
-      ["口", "mulut"],
-      ["車", "kendaraan"],
-      ["門", "gerbang"],
-      ["火", "api"],
-      ["水", "air"],
-      ["室", "kamar"],
-      ["家", "rumah"],
-      ["度", "kamar"],
-      ["金", "emas"],
-      ["土", "tanah"],
-      ["子", "anak"],
-      ["女", "wanita"],
-      ["学", "belajar"],
-      ["生", "hidup"],
-      ["先", "sebelumnya"],
-      ["私", "pribadi"],
-      ["上", "diatas/keatas"],
-      ["下", "bawah"],
-      ["中", "tengah"],
-      ["大", "besar"],
-      ["英", "hebat"],
-      ["会", "rapat"],
-      ["首", "leher"],
-      ["一", "satu-"],
-      ["二", "dua"],
-      ["三", "tiga"],
-      ["四", "empat"],
-      ["五", "lima"],
-      ["六", "enam"],
-      ["七", "tujuh"],
-      ["八", "delapan"],
-      ["九", "sembilan"],
-      ["十", "sepuluh"],
-      ["千", "ribu"],
-      ["万", "sepuluh ribu"],
-      ["早", "ratus"],
-      ["円", "lingkaran"],
-      ["小", "kecil"],
-      ["本", "buku"],
-      ["半", "setengah"],
-      ["分", "bagian"],
-      ["力", "kekuasaan"],
-      ["何", "apa"],
-      ["目", "mata"],
-      ["耳", "telinga"],
-      ["手", "tangan"],
-      ["足", "kaki"],
-      ["雨", "hujan"],
-      ["米", "beras"],
-      ["明", "terang"],
-      ["休", "beristirahat"],
-      ["体", "tubuh"],
-      ["好", "suka"],
-      ["男", "pria"],
-      ["林", "hutan"],
-      ["森", "hutan"],
-      ["竹", "bambu"],
-      ["貝", "kerang"],
-      ["花", "bunga"],
-      ["茶", "teh"],
-      ["肉", "daging"],
-      ["文", "kalimat"],
-      ["字", "huruf"],
-      ["物", "benda"],
-      ["牛", "sapi"],
-      ["鳥", "burung"],
-      ["魚", "ikan"],
+      ["日曜日", "にち-よう-び"],
+      ["月曜日", "げつ-よう-び"],
+      ["火曜日", "か-よう-び"],
+      ["水曜日", "すい-よう-び"],
+      ["木曜日", "もく-よう-び"],
+      ["金曜日", "きん-よう-び"],
+      ["土曜日", "ど-よう-び"],
+      ["今日", "きょう"],
+      ["昨日", "きのう"],
+      ["明日", "あした"],
+      ["明後日", "あさって"],
+      ["一昨日", "おととい"],
+      ["毎日", "まい-にち"],
+      ["毎朝", "まい-あさ"],
+      ["毎晩", "まい-ばん"],
+      ["今週", "こん-しゅう"],
+      ["先週", "せん-しゅう"],
+      ["来週", "らい-しゅう"],
+      ["一月", "いち-がつ"],
+      ["二月", "に-がつ"],
+      ["三月", "さん-がつ"],
+      ["四月", "し-がつ"],
+      ["五月", "ご-がつ"],
+      ["六月", "ろく-がつ"],
+      ["七月", "しち-がつ"],
+      ["八月", "はち-がつ"],
+      ["九月", "く-がつ"],
+      ["十月", "じゅう-がつ"],
+      ["十一月", "じゅう-いち-がつ"],
+      ["十二月", "じゅう-に-がつ"],
+      ["人体", "じん-たい"],
+      ["肩", "かた"],
+      ["喉", "のど"],
+      ["顔", "かお"],
+      ["頬", "ほほ"],
+      ["歯", "は"],
+      ["指", "ゆび"],
+      ["胃", "い"],
+      ["爪", "つめ"],
+      ["額", "ひたい"],
+      ["顎", "あご"],
+      ["鼻", "はな"],
+      ["口", "くち"],
+      ["唇", "くちびる"],
+      ["首", "くび"],
+      ["掌", "てのひら"],
+      ["体", "からだ"],
+      ["頭", "あたま"],
+      ["手", "て"],
+      ["足", "あし"],
+      ["腕", "うで"],
+      ["膝", "ひざ"],
+      ["髪", "かみ"],
+      ["背中", "せなか"],
+      ["腰", "こし"],
+      ["目", "め"],
+      ["耳", "みみ"],
+      ["踵", "かかと"],
+      ["足指", "あし-ゆび"],
+      ["親指", "おや-ゆび"],
+      ["人差し指", "ひと-さし-ゆび"],
+      ["中指", "なか-ゆび"],
+      ["薬指", "くすり-ゆび"],
+      ["小指", "こ-ゆび"],
+      ["顎鬚", "あご-ひげ"],
+      ["髭", "ひげ"],
+      ["太股", "ふともも"],
+      ["皮膚", "ひふ"],
+      ["血液", "けつ-えき"],
+      ["血", "ち"],
+      ["眉", "まゆ"],
+      ["胸", "むね"],
+      ["肘", "ひじ"],
+      ["臍", "へそ"],
+      ["脇の下", "わきのした"],
+      ["手首", "て-くび"],
+      ["足首", "あし-くび"],
+      ["眼球", "がん-きゅう"],
+      ["内臓", "ない-ぞう"],
+      ["腎臓", "じん-ぞう"],
+      ["肝臓", "かん-ぞう"],
+      ["肋骨", "ろっ-こつ"],
+      ["卵巣", "らん-そう"],
+      ["胎児", "たい-じ"],
+      ["心臓", "しん-ぞう"],
+      ["脾臓", "ひ-ぞう"],
+      ["脳", "のう"],
+      ["筋肉", "きん-にく"],
+      ["肺", "はい"],
+      ["血管", "けっ-かん"],
+      ["動脈", "どう-みゃく"],
+      ["静脈", "じょう-みゃく"],
+      ["子宮", "し-きゅう"],
+      ["網膜", "もう-まく"],
+      ["精子", "せい-し"],
+      ["臍の緒", "へそ-のお"],
+      ["頭蓋骨", "ずがい-こつ"],
+      ["骨", "ほね"],
+      ["腸", "ちょう"],
+      ["大腸", "だい-ちょう"],
+      ["鋏", "はさみ"],
+      ["電卓", "でん-たく"],
+      ["チョーク", "ちょーく"],
+      ["椅子", "いす"],
+      ["コンピュータ", "こんぴゅーた"],
+      ["辞書", "じしょ"],
+      ["紙", "かみ"],
+      ["机", "つくえ"],
+      ["教卓", "きょう-たく"],
+      ["黒板", "こく-ばん"],
+      ["定規", "じょうぎ"],
+      ["黒板消し", "こくばん-けし"],
+      ["鉛筆", "えん-ぴつ"],
+      ["シャープペン", "しゃーぷぺん"],
+      ["地図", "ちず"],
+      ["ペン", "ぺん"],
+      ["本棚", "ほん-だな"],
+      ["鉛筆削り", "えんぴつ-けずり"],
+      ["制服", "せい-ふく"],
+      ["ホッチキス", "ほっちきす"],
+      ["マーカー", "まーかー"],
+      ["通学鞄", "つうがく-かばん"],
+      ["筆箱", "ふで-ばこ"],
+      ["ボールペン", "ぼーるぺん"],
+      ["分度器", "ぶん-どき"],
+      ["教科書", "きょう-かしょ"],
+      ["百科事典", "ひゃっか-じてん"],
+      ["包丁", "ほうちょう"],
+      ["まな板", "まないた"],
+      ["浄水器", "じょう-すい-き"],
+      ["鍋", "なべ"],
+      ["フライパン", "ふらいぱん"],
+      ["やかん", "やかん"],
+      ["おたま", "おたま"],
+      ["排水溝", "はいすい-こう"],
+      ["ボウル", "ぼうる"],
+      ["ミキサー", "みきさー"],
+      ["おろし金", "おろし-がね"],
+      ["皮むき機", "かわむき-き"],
+      ["栓抜き", "せん-ぬき"],
+      ["缶切り", "かん-ぎり"],
+      ["コルク抜き", "こるく-ぬき"],
+      ["色彩", "しき-さい"],
+      ["ピンク", "ぴんく"],
+      ["暗色", "あん-しょく"],
+      ["明色", "めい-しょく"],
+      ["黄色", "きいろ"],
+      ["金色", "きん-いろ/こん-じき"],
+      ["銀色", "ぎん-いろ"],
+      ["黒い", "くろい"],
+      ["紫", "むらさき"],
+      ["青い", "あおい"],
+      ["水色", "みず-いろ"],
+      ["赤い", "あかい"],
+      ["赤紫", "あか-むらさき"],
+      ["茶色", "ちゃいろ"],
+      ["白い", "しろい"],
+      ["緑", "みどり"],
+      ["オレンジ色", "おれんじ-いろ"],
+      ["橙色", "だいだい-いろ"],
+      ["桃色", "もも-いろ"],
+      ["真紅", "ま-っか"],
+      ["真っ白", "まっ-しろ"],
+      ["真っ黒", "まっ-くろ"],
+      ["真っ青", "まっ-さお"],
+      ["灰色", "はいいろ"],
+      ["紺", "こん"],
+      ["紅", "くれない"],
+      ["一", "いち"],
+      ["二", "に"],
+      ["三", "さん"],
+      ["四", "よん/し"],
+      ["五", "ご"],
+      ["六", "ろく"],
+      ["七", "なな/しち"],
+      ["八", "はち"],
+      ["九", "きゅう"],
+      ["十", "じゅう"],
+      ["十一", "じゅう-いち"],
+      ["十二", "じゅう-に"],
+      ["十三", "じゅう-さん"],
+      ["十四", "じゅう-よん"],
+      ["十五", "じゅう-ご"],
+      ["十六", "じゅう-ろく"],
+      ["十七", "じゅう-なな"],
+      ["十八", "じゅう-はち"],
+      ["十九", "じゅう-きゅう"],
+      ["二十", "に-じゅう"],
+      ["二十一", "に-じゅう-いち"],
+      ["百", "ひゃく"],
+      ["二百", "に-ひゃく"],
+      ["三百", "さん-びゃく"],
+      ["四百", "よん-ひゃく"],
+      ["五百", "ご-ひゃく"],
+      ["六百", "ろっ-ぴゃく"],
+      ["七百", "なな-ひゃく"],
+      ["八百", "はっ-ぴゃく"],
+      ["九百", "きゅう-ひゃく"],
+      ["千", "せん"],
+      ["二千", "に-せん"],
+      ["三千", "さん-ぜん"],
+      ["四千", "よん-せん"],
+      ["五千", "ご-せん"],
+      ["六千", "ろく-せん"],
+      ["七千", "なな-せん"],
+      ["八千", "はっ-せん"],
+      ["九千", "きゅう-せん"],
+      ["万", "まん"],
+      ["二万", "に-まん"],
+      ["三万", "さん-まん"],
+      ["四万", "よん-まん"],
+      ["五万", "ご-まん"],
+      ["六万", "ろく-まん"],
+      ["七万", "なな-まん"],
+      ["八万", "はち-まん"],
+      ["十万", "じゅう-まん"],
+      ["百万", "ひゃく-まん"],
+      ["千万", "せん-まん"],
+      ["億", "おく"],
+      ["兆", "ちょう"]
     ];
 
     let questions = [], current = 0, score = 0;
