--- a/kanji.html
+++ b/kanji.html
@@ -85,16 +85,16 @@
 
   <script>
     const data = [
-      ["日曜日", "にち-よう-び"],
-      ["月曜日", "げつ-よう-び"],
-      ["火曜日", "か-よう-び"],
-      ["水曜日", "すい-よう-び"],
-      ["木曜日", "もく-よう-び"],
-      ["金曜日", "きん-よう-び"],
-      ["土曜日", "ど-よう-び"],
-      ["今日", "きょう"],
-      ["昨日", "きのう"],
-      ["明日", "あした"],
+      ["日曜日", "nichi-you-bi"],
+      ["月曜日", "getsu-you-bi"],
+      ["火曜日", "ka-you-bi"],
+      ["水曜日", "sui-you-bi"],
+      ["木曜日", "moku-you-bi"],
+      ["金曜日", "kin-you-bi"],
+      ["土曜日", "do-you-bi"],
+      ["今日", "kyoo"],
+      ["昨日", "kinoo"],
+      ["明日", "ashita"],
     ];
 
     let questions = [], current = 0, score = 0;
