--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Selamat Datang di Website Belajar Jepang</h1>
-    <p>Pilih salah satu kuis di bawah ini:</p>
+    <h1>Selamat Datang di Website Belajar Husain</h1>
+    <p>Pilih salah satu kuis di bawah ini, kalo milih banyak itu kamu😎:</p>
     <div class="menu">
       <button onclick="goTo('kuis')">📝 Kuis Hiragana & Katakana 1</button>
       <button onclick="location.href='kuizz.html'">🗒️ Kuis Hiragana & Katakana 2</button>
