--- a/kanji.html
+++ b/kanji.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kuis Kanji (Arti)</title>
+  <title>Kuis Membaca Kanji</title>
   <style>
     body {
       font-family: sans-serif;
@@ -73,7 +73,7 @@
 </head>
 <body>
   <div class="quiz-container">
-    <h2>Kuis Kanji (Arti + Kunyomi)</h2>
+    <h2>Kuis Membaca Kanji</h2>
     <div id="question">...</div>
     <div id="meaning">...</div>
     <div id="options"></div>
