--- a/kanji.html
+++ b/kanji.html
@@ -86,15 +86,36 @@
   <script>
     const data = [
       ["日曜日", "nichi-you-bi"],
-      ["月曜日", "getsu-you-bi"],
-      ["火曜日", "ka-you-bi"],
-      ["水曜日", "sui-you-bi"],
-      ["木曜日", "moku-you-bi"],
-      ["金曜日", "kin-you-bi"],
-      ["土曜日", "do-you-bi"],
-      ["今日", "kyoo"],
-      ["昨日", "kinoo"],
-      ["明日", "ashita"],
+["月曜日", "getsu-you-bi"],
+["火曜日", "ka-you-bi"],
+["水曜日", "sui-you-bi"],
+["木曜日", "moku-you-bi"],
+["金曜日", "kin-you-bi"],
+["土曜日", "do-you-bi"],
+["今日", "kyou"],
+["昨日", "kinou"],
+["明日", "ashita"],
+["明後日", "asatte"],
+["一昨日", "ototoi"],
+["毎日", "mai-nichi"],
+["毎朝", "mai-asa"],
+["毎晩", "mai-ban"],
+["今週", "kon-shuu"],
+["先週", "sen-shuu"],
+["来週", "rai-shuu"],
+["一月", "ichi-gatsu"],
+["二月", "ni-gatsu"],
+["三月", "san-gatsu"],
+["四月", "shi-gatsu"],
+["五月", "go-gatsu"],
+["六月", "roku-gatsu"],
+["七月", "shichi-gatsu"],
+["八月", "hachi-gatsu"],
+["九月", "ku-gatsu"],
+["十月", "juu-gatsu"],
+["十一月", "juu-ichi-gatsu"],
+["十二月", "juu-ni-gatsu"],
+["人体", "jin-tai"],
     ];
 
     let questions = [], current = 0, score = 0;
