--- a/kosakata.html
+++ b/kosakata.html
@@ -57,7 +57,7 @@
 </head>
 <body>
   <div class="quiz-container">
-    <h1>Kuis Kosakata Jepang</h1>
+    <h1>Kuis Kosakata</h1>
     <div id="question">Memuat soal...</div>
     <div id="options"></div>
     <div id="result"></div>
