--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
       <button onclick="location.href='kotoba.html'">📔 Kotoba Minna</button>
       <button onclick="location.href='n5kosakata'">📒 Kosakata N5</button>
       <button onclick="location.href='conversation'">🗒️ Percakapan Jepang</button>
+      <button onclick="location.href='tkajepang.html'">🇯🇵 Kuis TKA Jepang</button>
       <button onclick="location.href='matematika.html'">📑 Perkalian Dasar</button>
     </div>
   </div>
