--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
     <div class="menu">
       <button onclick="goTo('kuis')">📝 Kuis Hiragana & Katakana 1</button>
       <button onclick="location.href='kuizz.html'">🗒️ Kuis Hiragana & Katakana 2</button>
+      <button onclick="location.href='artikanji.html'">📒 Kuis Arti Kanji</button>
+      <button onclick="location.href='kanjikunyomi.html'">📓 Kuis Kun/On Kanji</button>
       <button onclick="goTo('kosakata')">📚 Kuis Kosakata</button>
-      <button onclick="goTo('kanji')">🈶 Membaca Kanji</button>
+      <button onclick="goTo('kanji')">🈶 Kosakata Kanji</button>
       <button onclick="location.href='kotoba.html'">📔 Kotoba Minna</button>
       <button onclick="location.href='n5kosakata'">📒 Kosakata N5</button>
       <button onclick="location.href='conversation'">🗒️ Percakapan Jepang</button>
