--- a/kotoba.html
+++ b/kotoba.html
@@ -118,7 +118,7 @@
       ["じしょ", "kamus"],
       ["ざっし", "majalah"],
       ["しんぶん", "koran"],
-      ["ソート", "notes"],
+      ["ノート", "notes"],
       ["てちょう", "buku catatan"],
       ["めいし", "kartu nama"],
       ["カード", "kartu"],
