--- a/kanjikunyomi.html
+++ b/kanjikunyomi.html
@@ -73,6 +73,16 @@
 ["門", "mon"],
 ["火", "ka"],
 ["水", "sui"],
+      ["室", "shitsu"],
+["家", "ka"],
+["度", "do"],
+["竹", "take"],
+["貝", "kai"],
+["花", "hana"],
+["茶", "cha"],
+["肉", "niku"],
+["文", "bun"],
+["字", "ji"],
     ];
 
     let questions = [];
