--- a/kosakata.html
+++ b/kosakata.html
@@ -132,7 +132,8 @@
       ["osoi", "lambat"],["tooi", "jauh"],["chikai", "dekat"],["tsuyoi", "kuat"],["yowai", "lemah"],["takai", "tinggi,mahal"],["hikui", "rendah"],["atsui", "panas(mkn,minum dll)"],
       ["atatakai", "hangat(mkn,minum dll)"],["atsui", "panas(suhu)"],["tsumetai", "dingin(mkn,minum dll)"],["nurui", "kurang panas, tdk panas tdk dingin jg"],["marui", "bundar/bulat"],["amai", "manis"],
       ["karai", "pedas"],["suppai", "asam"],["shiokarai", "asin"],["nigai", "pahit"],["koi", "pekat"],["usui", "tipis,encer(rasa)"],["oishii", "enak"],["mazui", "tidak enak"],["samui", "dingin(suhu)"],
-      ["atatakai", "hangat(suhu)"],
+      ["atatakai", "hangat(suhu)"],["suzushii", "sejuk(suhu)"],["mushiatsui", "panas gerah"],["akarui", "terang,riang"],["kurai", "gelap,suram"],["kitanai", "kotor"],["omoi", "berat"],["karui", "ringan"],
+      ["kuwashii", "detail"],["muzukashii", "sulit"],["yasashii", "mudah"],["mezurashii", "langka"],["okashii", "aneh,lucu"],["abunai", "berbahaya"],["umai", "enak,pandai"],["ii", "bagus"],["warui", "jelek"],
       
     ];
      let questions = [], current = 0, score = 0;
