--- a/kotoba.html
+++ b/kotoba.html
@@ -258,6 +258,26 @@
       ["ロンドン", "london"],
       ["バンコク", "bangkok"],
       ["ロサンゼルス", "los angels"],
+      ["いきます", "pergi"],
+      ["きます", "datang"],
+      ["かえります", "pulang,kembali"],
+      ["かっこう", "sekolah"],
+      ["スーパー", "pasar swalayan"],
+      ["えき", "stasiun"],
+      ["ひこうき", "pesawat"],
+      ["ふね", "kapal"],
+      ["でんしゃ", "kereta"],
+      ["ちかてつ", "kereta bawah tanah"],
+      ["しんかんせん", "(kereta super)"],
+      ["バス", "bus"],
+      ["タクシー", "taksi"],
+      ["じてんしゃ", "sepeda"],
+      ["あるいて", "dengan jalan kaki"],
+      ["ひと", "orang"],
+      ["ともだち", "teman"],
+      ["かれ", "dia(laki-laki)"],
+      ["かのじょ", "dia(perempuan)"],
+      ["かぞく", "keluarga"],
     ];
 
     let questions = [];
