--- a/n5kosakata.html
+++ b/n5kosakata.html
@@ -137,6 +137,15 @@
       ["いろいろ", "berbagai macam"],
       ["うえ", "diatas dari"],
       ["うしろ", "dibelakang"],
+      ["うすい", "kurus,lemah"],
+      ["うた", "lagu"],
+      ["うたう", "menyanyikan"],
+      ["うまれる", "terlahir"],
+      ["うみ", "laut"],
+      ["うる", "untuk menjual"],
+      ["うるさい", "berisik,mengganggu"],
+      ["うわぎ", "jaket"],
+      ["え", "gambar"],
     ];
 
     let questions = [];
