--- a/kanjikunyomi.html
+++ b/kanjikunyomi.html
@@ -83,6 +83,16 @@
 ["肉", "niku"],
 ["文", "bun"],
 ["字", "ji"],
+      ["物", "mono"],
+["牛", "gyuu"],
+["鳥", "tori"],
+["魚", "sakana"],
+["明", "mei"],
+["休", "kyuu"],
+["体", "tai"],
+["好", "suki"],
+["男", "otoko"],
+["林", "hayashi"],
     ];
 
     let questions = [];
